# tui-progress

./: .gitignore  pyproject.toml  tox.ini
tests/: test_package.py
tui_progress/: __init__.py  collections.py  color.py  progress.py  table.py  terminal.py  tui.py
