[tool.poetry]
name = "tui-progress"
version = "0.1.0"
description = ""
authors = ["Zach Kanzler <they4kman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cursor = "^1.3.4"
halo = "^0.0.31"
wrapt = "^1.14.0"
humanize = "^4.0.0"
log-symbols = "^0.0.14"
terminaltables = "^3.1.10"
tqdm = "^4.63.0"
asciimatics = "^1.13.0"
wcwidth = "^0.2.5"
cached-property = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
