[tool.poetry]
name = "tui-progress"
version = "0.1.0"
description = ""
authors = ["Zach Kanzler <they4kman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

asciimatics = "^1.13.0"
cached-property = "^1.5.2"
cursor = "^1.3.4"
halo = "^0.0.31"
humanize = "^4.0.0"
log-symbols = "^0.0.14"
terminaltables = "^3.1.10"
tqdm = "^4.63.0"
wcwidth = "^0.2.5"
wrapt = "^1.14.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"
tox = "^3.24.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
